# HardwareServer

./: README.md  old_code.txt  pyproject.toml
hardware_server/: Bluetooth.py  BluetoothNew  BluetoothOld  BluetoothServer.py  Data.py  Header.py  MessageGeneration.py  Serial.py  TCP.py  TODO.txt  bluetooth.py  client.py  data.py  header.py  message_generation.py  packet.py  socket.py
tests/: test_bluetooth.py  test_data.py  test_header.py  test_message_generation.py  test_packet.py
