[tool.poetry]
name = "hardware-server"
version = "0.1.0"
description = ""
authors = ["Donald Jennings <D.D.Jennings@outlook.com>"]
readme = "README.md"
packages = [{include = "hardware_server"}]

[tool.poetry.dependencies]
python = "^3.10"
flask =  "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
